--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
@@ -16,17 +16,20 @@
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
       <div>
         <section>
           <h1>Эффективные решения для вашего бизнеса</h1>
-          <button type="button" >Заказать услугу</button>
+          <button type="button">Заказать услугу</button>
         </section>
       </div>
       <section>
+        <h2 hidden>Принципы нашей работы</h2>
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
@@ -95,7 +98,7 @@
         <ul>
           <li>
             <img
-              src="./images/ihordemyanenko.jpg"
+              src="./images/employees/ihordemyanenko.jpg"
               alt="фотография работника, мужчина"
               width="270"
               height="260"
@@ -105,7 +108,7 @@
           </li>
           <li>
             <img
-              src="./images/olharepina.jpg"
+              src="./images/employees/olharepina.jpg"
               alt="фотография работника, женщина"
               width="270"
               height="260"
@@ -115,7 +118,7 @@
           </li>
           <li>
             <img
-              src="./images/nikolaitarasov.jpg"
+              src="./images/employees/nikolaitarasov.jpg"
               alt="фотография работника, мужчина"
               width="270"
               height="260"
@@ -125,7 +128,7 @@
           </li>
           <li>
             <img
-              src="./images/mihailermakov.jpg"
+              src="./images/employees/mihailermakov.jpg"
               alt="фотография работника, мужчина"
               width="270"
               height="260"
@@ -138,9 +141,17 @@
     </main>
     <footer>
       <a href="">WebStudio</a>
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <address>
+        <a
+          href="https://goo.gl/maps/SuCuxpFkc1anFY9j8"
+          target="_blank"
+          rel="noopener noreffere"
+        >
+          г. Киев, пр-т Леси Украинки, 26</a
+        >
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      </address>
     </footer>
   </body>
 </html>
